--- a/website/src/pages/Consultas/ConsultasIBAN.css
+++ b/website/src/pages/Consultas/ConsultasIBAN.css
@@ -1,5 +1,4 @@
-.iban-container {
-    margin: 50px auto;
+  *{
     text-align: center;
   }
   
@@ -7,28 +6,26 @@
     font-size: 36px;
     font-weight: bold;
     margin-bottom: 20px;
-  }
-  
-  h2 {
-    font-size: 28px;
-    margin-bottom: 10px;
+    margin-left: 900px;
   }
   
   p {
     font-size: 24px;
     margin-bottom: 20px;
   }
+
+  button[type="IBAN"] {
+    padding: 10px 30px ;
+    border-radius: 50px;
+    background-color: #007bff;
+    cursor: pointer;
+    margin-left: 1280px;
+    }
   
-  h3 {
-    font-size: 24px;
-    margin-bottom: 10px;
+  button[type="IBAN"]:hover {
+    background-color: #028d20;
   }
-  
-  .iban {
-    font-size: 48px;
-    font-weight: bold;
-    background-color: #eee;
-    padding: 10px;
-    border-radius: 5px;
-    display: inline-block;
+
+  p.success{
+    margin: auto;
   }
