--- a/website/src/pages/Home/Home.css
+++ b/website/src/pages/Home/Home.css
@@ -24,12 +24,8 @@
   
   /* cabeçalho da página */
   .header {
-    /*background-image: url("bank.png");*/
-    background-position: center;
     background-color: #9c9c9c;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 300px;
+    height: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,14 +53,13 @@
   .main-content {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: 2rem 0;
+    text-align: center;
   }
   
   .main-content h2 {
     font-size: 2.5rem;
     font-weight: 500;
-    margin: 0;
+    margin: 10;
     padding: 0;
   }
   
@@ -75,9 +70,8 @@
   }
   
   .main-content .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: 2rem;
+    display: center;
+    margin-top: -1rem;
+    margin-left: 6rem;
   }
   
