Css almost done

--- a/website/src/pages/Main.css
+++ b/website/src/pages/Main.css
@@ -1,13 +1,5 @@
-/* Estilo para o body da página */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f1f1f1;
-    margin: 0;
-  }
-  
-  /* Estilo para o cabeçalho */
-  header {
-    background-color: #0d47a1;
+header.main {
+    background-color: #1877f2;
     color: #fff;
     display: flex;
     justify-content: space-between;
@@ -15,131 +7,34 @@ body {
     padding: 10px 20px;
   }
   
-  /* Estilo para o menu de navegação */
-  nav ul {
+  div.cabeçalho nav ul {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
   }
   
-  nav li {
+  div.cabeçalho nav li {
     margin: 0 10px;
   }
   
-  nav a {
+  div.cabeçalho nav a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
   }
   
-  nav a:hover {
+  div.cabeçalho nav a:hover {
     text-decoration: underline;
   }
   
-  /* Estilo para o botão de logout */
   header button {
     background-color: #fff;
     border: none;
     border-radius: 5px;
-    color: #0d47a1;
+    color: #1877f2;
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
     padding: 10px 20px;
   }
-  
-  header button:hover {
-    background-color: #0d47a1;
-    color: #fff;
-  }
-  
-  /* Estilo para o conteúdo principal */
-  main {
-    padding: 20px;
-    max-width: 800px;
-    margin: 0 auto;
-  }
-
-  /* Estilo para os títulos */
-    h1, h2, h3 {
-    font-weight: bold;
-    margin: 10px 0;
-    color: black;
-    }
-    
-    /* Estilo para os parágrafos */
-    p {
-    line-height: 1.5;
-    margin-bottom: 10px;
-    color: black;
-    }
-    
-    /* Estilo para as imagens */
-    img {
-    max-width: 100%;
-    height: auto;
-    }
-    
-    /* Estilo para as seções */
-    section {
-    margin-bottom: 30px;
-    }
-    
-    /* Estilo para os formulários */
-    form {
-    margin-bottom: 30px;
-    }
-    
-    label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-    }
-    
-    input, select, textarea {
-    padding: 5px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    margin-bottom: 10px;
-    width: 100%;
-    }
-    
-    input[type="submit"] {
-    background-color: #0d47a1;
-    color: #fff;
-    cursor: pointer;
-    }
-    
-    input[type="submit"]:hover {
-    background-color: #fff;
-    color: #0d47a1;
-    }
-    
-    /* Estilo para as tabelas */
-    table {
-    border-collapse: collapse;
-    width: 100%;
-    margin-bottom: 30px;
-    }
-    
-    th, td {
-    padding: 10px;
-    text-align: left;
-    border: 1px solid #ccc;
-    }
-    
-    th {
-    background-color: #0d47a1;
-    color: #fff;
-    }
-    
-    /* Estilo para o rodapé */
-    footer {
-    background-color: #0d47a1;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    margin-top: 50px;
-    }
