--- a/website/src/pages/Consultas/ConsultasIBAN.css
+++ b/website/src/pages/Consultas/ConsultasIBAN.css
@@ -1,31 +1,36 @@
-  *{
-    text-align: center;
-  }
-  
-  h1 {
+ h1.check {
     font-size: 36px;
     font-weight: bold;
     margin-bottom: 20px;
-    margin-left: 900px;
-  }
-  
-  p {
-    font-size: 24px;
-    margin-bottom: 20px;
+    text-align: center;
   }
 
-  button[type="IBAN"] {
-    padding: 10px 30px ;
+  button.see[type="IBAN"] {
+    padding: 10px;
     border-radius: 50px;
-    background-color: #007bff;
+    border: none;
+    width: 200px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #1877f2;
+    color: #fff;
     cursor: pointer;
-    margin-left: 1280px;
+    margin-top: 20px;
     }
   
-  button[type="IBAN"]:hover {
+  button.see[type="IBAN"]:hover {
     background-color: #028d20;
   }
 
+  form.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   p.success{
-    margin: auto;
+    margin-top: 20px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
   }
