--- a/website/src/pages/Home/Home.css
+++ b/website/src/pages/Home/Home.css
@@ -12,18 +12,7 @@
     --text-color: #333333;
   }
   
-  /* Estilos globais */
-  body {
-    font-family: "Roboto", sans-serif;
-    background-color: #f2f2f2;
-    color: var(--text-color);
-    margin: 0;
-    padding: 0;
-  }
-  
-  
-  /* cabeçalho da página */
-  .header {
+  .home-header {
     background-color: #9c9c9c;
     height: 150px;
     display: flex;
@@ -33,7 +22,7 @@
     flex-direction: column;
   }
   
-  .header h1 {
+  .home-header h1 {
     font-size: 3rem;
     font-weight: 500;
     color: var(--secondary-color);
@@ -41,7 +30,7 @@
     padding: 0;
   }
   
-  .header p {
+  .home-header p {
     font-size: 1.5rem;
     font-weight: 400;
     color: var(--secondary-color);
@@ -49,7 +38,7 @@
     padding: 0;
   }
   
-  /* Estilizando o conteúdo principal */
+
   .main-content {
     display: flex;
     flex-direction: column;
