--- a/website/src/pages/Login/LoginForm.css
+++ b/website/src/pages/Login/LoginForm.css
@@ -1,16 +1,26 @@
-form {
+form.login-form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 300px;
+  margin-top: 265px;
 }
 
-label {
+label.pass {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
-  font-size: 16px;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+label.email {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 input[type="email"], [type="password"] {
@@ -21,12 +31,12 @@ input[type="email"], [type="password"] {
   font-size: 20px;
 }
 
-button {
+button.login {
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 50px;
   border: none;
-  width: 150px;
-  font-size: 16px;
+  width: 200px;
+  font-size: 20px;
   font-weight: bold;
   background-color: #1877f2;
   color: #fff;
@@ -34,10 +44,6 @@ button {
   margin-top: 20px;
 }
 
-button:hover {
-  background-color: #166fe5;
-}
-
-div {
-  margin-top: 20px;
+button.login:hover {
+  background-color: green;
 }
