--- a/website/src/pages/Transferencias/Transferencias.css
+++ b/website/src/pages/Transferencias/Transferencias.css
@@ -1,59 +1,77 @@
-.container {
-    max-width: 600px;
-  }
-  
-  h1 {
+  h1.title{
     text-align: center;
-    }
+  }
   
   p.balance {
     margin-top: 60px;
     text-align: center;
     font-weight: bold;
+    font-size: 25px;
     color: #028d20;
   }
   
-  form {
-    margin-top: 60px;
+  form.interface  {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
   }
   
-  label {
+  label.from {
     font-weight: bold;
-    font-size: 30px;
-    margin-bottom: 10px;
+    font-size: 25px;
   }
   
+  label.to {
+    font-weight: bold;
+    font-size: 25px;
+    margin-top: -40px;
+  }
+
+  label.money {
+    font-weight: bold;
+    font-size: 25px;
+    margin-top: -40px;
+  }
+
   input[type="text"] {
     padding: 20px;
     width: 150px;
     border-radius: 50px;
-    border: 1px solid #ccc;
+    border: 2px solid #1877f2;
+    font-size: 20px;
   }
   
-  button[type="submit"] {
-    padding: 10px 30px ;
+  button.transferir {
     border-radius: 50px;
-    background-color: #007bff;
+    border: none;
+    width: 200px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #1877f2;
+    color: #fff;
     cursor: pointer;
+    margin-top: -20px;
+    margin-bottom: 10px;
     }
   
-  button[type="submit"]:hover {
-    background-color: #028d20;
-  }
-
-  h3{
-    vertical-align: middle;
-    color: #ffffff;
+  button.transferir:hover {
+    background-color: green;
   }
   
   p.successful{
     text-align: center;
     padding-bottom: 30px;
     color:#028d20;
+    font-size: 30px;
   }
 
-  h2{
+  h2.history {
     padding-left: 40px;
+    font-size: 30px;
+    background-color: #1877f2;
+    color: #fff;
+    border-radius: 50px;
   }
 
   .transfer-history {
@@ -62,7 +80,6 @@
     padding-right: 250px;
     padding-bottom: 10px;
     padding-left: 250px;
-    margin: 0;
   }
   
   .transfer-history li {
@@ -71,6 +88,7 @@
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
+    font-size: 25px;
   }
   
   .transfer-history li p {
