--- a/website/src/pages/Mensagens/Mensagens.css
+++ b/website/src/pages/Mensagens/Mensagens.css
@@ -1,21 +1,33 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .table {
-    border-collapse: collapse;
-    width: 300px;
-  }
-  
-  .table th, .table td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  .table th {
-    background-color: #f2f2f2;
-  }
+  text-align: center;
+  margin-top: 50px;
+}
+
+.title {
+  font-weight: bold;
+  margin-bottom: 35px;
+}
+
+.table {
+  width: 80%;
+  margin: 0 auto;
+  border-collapse: collapse;
+}
+
+.table th,
+.table td {
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.table th {
+  background-color: #f2f2f2;
+}
+
+.table tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.table tbody tr:hover {
+  background-color: #eaeaea;
+}
